--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 #add context path
 server.contextPath=/DIYWEB
-#server.port=12378
+#server.port=8080  #8080 is default
 
+#REST settings
+spring.data.rest.default-page-size = 5
+#spring.data.rest.baseUri=/DIYWEB/
+spring.data.rest.basePath= /api
 
 # Package where our entities (models) are located
 daniel22c.entity.package = com.daniel22c.DIYWEB.model
